samples/_failures_safe/1761411823_318dc9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2c95ba41.c: In function ‘main’:
./samples/SAFE/__tmp_2c95ba41.c:162:5: error: expected expression at end of input
  162 |     if (unique_count ==
      |     ^~
./samples/SAFE/__tmp_2c95ba41.c:162:5: error: expected declaration or statement at end of input
